--- a/app/app.css
+++ b/app/app.css
@@ -103,3 +103,63 @@ body {
 	display: inline-block;
 	border-radius: 50%;
 }
+
+
+/*视图的样式*/
+.list-group .media {
+	margin-top: 0;
+}
+.list-group .media-heading{
+	margin-bottom:15px;
+	font-weight: 700;
+}
+.list-group p{
+	margin:0;
+}
+#bottom a{
+	cursor: pointer;
+}
+
+/* css3动画*/
+.loading{
+	width: 150px;
+	height: 15px;
+	margin: 0 auto;
+	margin-top:100px;
+}
+.loading span{
+	display: inline-block;
+	width: 15px;
+	height: 100%;
+	margin-right: 5px;
+	background: lightgreen;
+	-webkit-transform-origin: right bottom;
+	-webkit-animation: load 1s ease infinite;
+}
+.loading span:last-child{
+	margin-right: 0;
+}
+@-webkit-keyframes load{
+	0%{
+		opacity: 1;
+	}
+	100%{
+		opacity: 0;
+		-webkit-transform: rotate(90deg);
+	}
+}
+.loading span:nth-child(1){
+	-webkit-animation-delay:0.13s;
+}
+.loading span:nth-child(2){
+	-webkit-animation-delay:0.26s;
+}
+.loading span:nth-child(3){
+	-webkit-animation-delay:0.39s;
+}
+.loading span:nth-child(4){
+	-webkit-animation-delay:0.52s;
+}
+.loading span:nth-child(5){
+	-webkit-animation-delay:0.65s;
+}
